--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
             <artifactId>druid</artifactId>
             <version>1.1.10</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <!--scope注释原因 IDEA编译本地不通过识别不到jar,上传需释放-->
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
