--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: platform-data  #指定服务名，注册到eureka后，能够显示这里标注的服务名,名字中间必须是横线，不能是下划线
   profiles:
-    active: test
+    active: default
   cloud:
     nacos:
       config:
