--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -16,6 +16,27 @@ spring:
         server-addr:  172.31.1.27:8848
         namespace: 25c137a9-a801-4033-9b3d-eac6d793c341
         auto-register:  true
+#  redis:
+##    sentinel:
+##      nodes: 172.31.1.19:6379
+#    # 连接超时时长（毫秒）
+#    timeout: 6000ms
+#    jedis:
+#    #连接池设置
+#      pool:
+#      # 连接池中的最大空闲连接
+#        max-idle: 10
+#         # 连接池最大阻塞等待时间（使用负值表示没有限制）
+#        max-wait: -1ms
+#        # 连接池最大连接数（使用负值表示没有限制）
+#        max-active: 1000
+#    #服务器地址
+#    host: 172.31.1.19
+#    port: 6379
+#    password:
+shiro:
+  annotations:
+    enabled:  false
 
 ##数据库连接信息配置
 #ds:
@@ -27,10 +48,10 @@ spring:
 #    tables: sc_loan,sc_borrower,sc_additional_info,sc_affiliated_enterprise,sc_band_kind,sc_bank_info,sc_brand_info,sc_core_enterprise,sc_credit_apply,sc_credit_audit,sc_credit_record,sc_enterprise_bank_info,sc_loan_audit,sc_loan_file,sc_order,sc_payment,sc_payment_detail,sc_supplier,sc_supplier_product,sc_white_list
 #
 ##端口配置
-#server:
-#  port: 8089
-#  servlet:
-#    context-path: /
+server:
+  port: 8081
+  servlet:
+    context-path: /
 
 #eureka相关配置
 #eureka:
